fix: navbar z-index 😘🤣❤️

--- a/AOL_MachineLearning/src/components/navbar/navbar.css
+++ b/AOL_MachineLearning/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  z-index: 2;
   position: fixed;
   width: 100%;
   background-color: white;
